DT-552 - Echo to Blue Pallet

--- a/localization/en.json
+++ b/localization/en.json
@@ -268,21 +268,21 @@
   "navigation.credentials.certified": "Certified",
   "navigation.credentials.pending": "Pending",
   "dwolla.controllerTitlePopup": "Please read below for the definition of Controller in this context.",
-  "dwolla.paymentPoweredBy": "Echo Global Chemical Exchange payment gateway is powered by:",
+  "dwolla.paymentPoweredBy": "Blue Pallet Global Chemical Exchange payment gateway is powered by:",
   "dwolla.confirmAcc": "Confirm Account Administrator Information",
   "dwolla.confirmCompanyInfo": "Confirm Company Information",
-  "dwolla.thanksForJoining": "Thank you for joining the Echo Marketplace.",
-  "dwolla.registrationProcess.description": "This is the registration process for your company's payment method. For this process you will need to know some personal information about: your account administrator, your company beneficiaries (if applicable), and your company controller (i.e. Chief Executive Officer (CEO), Chief Operating Officer (COO), Chief Financial Officer (CFO), President, Controller, An executive officer or designated senior manager). If you need to gather information for any of the above person(s), you can exit this process and return at any time by clicking on 'Settings' and then 'Bank Accounts'. None of the personal information gathered will be stored; it is solely for identification authorization. Please see these links for more detailed information about the security of your data ({dwollaWhitePaper} & {dwollaSecurity}). If you have any questions or comments please contact Echo Support - email {email} or call {number}.",
+  "dwolla.thanksForJoining": "Thank you for joining the Blue Pallet Marketplace.",
+  "dwolla.registrationProcess.description": "This is the registration process for your company's payment method. For this process you will need to know some personal information about: your account administrator, your company beneficiaries (if applicable), and your company controller (i.e. Chief Executive Officer (CEO), Chief Operating Officer (COO), Chief Financial Officer (CFO), President, Controller, An executive officer or designated senior manager). If you need to gather information for any of the above person(s), you can exit this process and return at any time by clicking on 'Settings' and then 'Bank Accounts'. None of the personal information gathered will be stored; it is solely for identification authorization. Please see these links for more detailed information about the security of your data ({dwollaWhitePaper} & {dwollaSecurity}). If you have any questions or comments please contact Blue Pallet Support - email {email} or call {number}.",
   "dwolla.beneficialOwnersDesc1": "To help the government fight financial crime, Federal regulation requires our financial institution partners to obtain, verify, and record information about the beneficial owners of legal entity customers. Legal entities can be abused to disguise involvement in terrorist financing, money laundering, tax evasion, corruption, fraud, and other financial crimes. Requiring the disclosure of key individuals who ultimately own or control a legal entity (e.g. the beneficial owners) helps law enforcement investigate and prosecute these crimes.",
   "dwolla.beneficialOwnersDesc2": "The following information must be collected for each individual, if any, who, directly or indirectly, through any contract, arrangement, understanding, relationship or otherwise, owns 25 percent or more of the equity interests of the legal entity listed above. If no individual meets this definition or if the company is publicly traded, please check “Beneficial Owner Not Applicable” below and skip this section.",
   "dwolla.noBeneficialOwner": "Beneficial Owner Not Applicable",
   "dwolla.controller": "Controller",
-  "dwolla.controllerDesc1": "To assure compliance with US financial institution policies, Echo must collect the information of at least one individual with significant responsibility for managing the legal entity listed above, such as:",
+  "dwolla.controllerDesc1": "To assure compliance with US financial institution policies, Blue Pallet must collect the information of at least one individual with significant responsibility for managing the legal entity listed above, such as:",
   "dwolla.controllerDesc2": "An executive officer or senior manager (e.g., Chief Executive Officer, Chief Financial Officer, Chief Operating Officer, Managing Member, General Partner, President, Vice President, Treasurer); or",
   "dwolla.controllerDesc3": "Any other individual who regularly performs similar functions.",
   "dwolla.acceptance": "I, {name}, hereby certify, to the best of my knowledge, that the information provided above is complete and correct.",
   "dwolla.registrationComplete": "Registration Completed",
-  "dwolla.registrationCompleteDesc": "Thank you for registering for Dwolla payment processor with Echo. The verification process can take 24-48 hours. In the meantime you can add your Products, Warehouses, Branches, and other information to the Settings section of Echo Exchange. Once you have received the verification e-mail, you will be able to add your Bank Accounts. You will be required to set up a Bank Account and Logistics account before you are able to make transactions. If you do not receive a verification e-mail within 48 hours, please contact {mail} or call {tel}.",
+  "dwolla.registrationCompleteDesc": "Thank you for registering for Dwolla payment processor with Blue Pallet. The verification process can take 24-48 hours. In the meantime you can add your Products, Warehouses, Branches, and other information to the Settings section of Blue Pallet. Once you have received the verification e-mail, you will be able to add your Bank Accounts. You will be required to set up a Bank Account and Logistics account before you are able to make transactions. If you do not receive a verification e-mail within 48 hours, please contact {mail} or call {tel}.",
   "dwolla.registrationCompleteDesc1": "Thanks for registering for your Dwolla Account. The verification process can take 24-48 hours. In the meantime you can add your Products, Warehouses, Branches, and other information in the Settings section of (web app name).",
   "dwolla.registrationCompleteDesc2": "Once Dwolla sends you the verification e-mail you can then add your Bank Accounts and Logisitics details. If you don’t receive a verification e-mail please contact support@echosystem.com or call (833) 321 3246.",
   "dwolla.personOpeningAcc": "Person Opening the Account:",
@@ -582,7 +582,7 @@
   "global.reject": "Reject",
   "global.accept": "Accept",
   "global.decline": "Decline",
-  "global.echoTitle": "Echosystem",
+  "global.echoTitle": "Blue Pallet",
   "global.description": "Description",
   "global.registerDwollaAcc": "Register Dwolla Account",
   "global.myProfile": "My Profile",
@@ -925,10 +925,10 @@
   "global.sds": "SDS",
   "global.sdsRevisionDate": "SDS Revision Date",
   "global.sdsVersionNumber": "SDS Version Number",
-  "global.echoProduct": "Echo Product",
-  "global.echoProductName": "Echo Product Name",
-  "global.echoProductCode": "Echo Product Code",
-  "global.echoProductNameOrCode": "Echo Product Name or Code",
+  "global.echoProduct": "Company Generic Product",
+  "global.echoProductName": "Company Generic Product Name",
+  "global.echoProductCode": "Company Generic Product Code",
+  "global.echoProductNameOrCode": "Company Generic Product Name or Code",
   "global.freezeProtect": "Freeze Protect",
   "global.nmfcNumber": "NMFC Number",
   "global.anonymous": "Anonymous",
@@ -1368,7 +1368,7 @@
   "myInventory.searchByProductOrTagName": "Search by product or tag name",
   "myInventory.editPricing": "Edit Pricing",
   "myInventory.andAbove": "and above",
-  "myInventory.productStatus.unmapped": "This Product Offer's Company Product is not mapped to Echo Product, so it will not be visible to other users at Marketplace.",
+  "myInventory.productStatus.unmapped": "This Product Offer's Company Product is not mapped to Company Generic Product, so it will not be visible to other users at Marketplace.",
   "myInventory.tooltipExpired": "Shows if Product offer is expired",
   "myInventory.tooltipProductStatus": "Shows if Product offer's Generic Product is published and offer is visible on the Marketplace",
   "myInventory.acceptBids": "Accept bids on offer?",
@@ -1696,7 +1696,7 @@
   "addInventory.uploadSpecSheet.header": "Upload Spec Sheet",
   "addInventory.uploadSpecSheet.description1": "The Spec Sheet, also known as a Technical Data Sheet (TDS), is required for a product offer to broadcast to the marketplace.",
   "addInventory.uploadSpecSheet.description2": "You can drag and drop a file from your computer or click on the box to search for the file as well.",
-  "addInventory.uploadSpecSheet.description3": "IMPORTANT! Your company name and contact information cannot be listed on this document and non compliance is against Echo's Terms and Conditions.",
+  "addInventory.uploadSpecSheet.description3": "IMPORTANT! Your company name and contact information cannot be listed on this document and non compliance is against Blue Pallet's Terms and Conditions.",
   "addInventory.optionalProductInfo": "OPTIONAL PRODUCT INFO",
   "addInventory.condition": "Condition",
   "addInventory.grade": "Grade",
@@ -1915,10 +1915,10 @@
   "checkout.summary.orderTotalValue": "Order Total: {value}",
   "checkout.summary.continueToFinish": "Continue to {value} to finish checking out.",
   "checkout.summary.step4": "step 4",
-  "checkout.summary.byPlacingYourOrder": "By placing your order, you agree to Echosystem’s {privacyPolicy} and {conditionsOfUse}.",
+  "checkout.summary.byPlacingYourOrder": "By placing your order, you agree to Blue Pallet’s {privacyPolicy} and {conditionsOfUse}.",
   "checkout.summary.privacyPolicy": "Privacy Policy",
   "checkout.summary.conditionsOfUse": "Conditions Of Use",
-  "checkout.titlePage": "Echosystem / Checkout",
+  "checkout.titlePage": "Blue Pallet / Checkout",
   "checkout.moreResultsAreAvailable": "More results are available, please search by location name or address.",
   "order.deleteHeader": "Delete Order",
   "order.deleteBody": "You are about to delete last item of order. Doing so will redirect you to Shopping cart. Do you wish to continue?",
@@ -2013,12 +2013,12 @@
   "password.retype": "Re-type Password",
   "verification.hello": "Hello!",
   "verification.helloAgain": "Hello again!",
-  "verification.echosTOS": "Echo's Terms of Service",
+  "verification.echosTOS": "Blue Pallet's Terms of Service",
   "verification.dwollasTOS": "Dwolla's Terms of Service",
   "verification.termsOfService": "Terms of Service",
   "verification.termsOfUse": "Terms of Use",
   "verification.privacyPolicy": "Privacy Policy",
-  "verification.termsOfAgreement": "For US residents only. By checking this box, you agree to Echo's {echosTermsOfService}, {echosTermsOfUse} and {echosPrivacyPolicy}, as well as Dwolla's {dwollasTermsOfService} and {dwollasPrivacyPolicy}.",
+  "verification.termsOfAgreement": "For US residents only. By checking this box, you agree to Blue Pallet's {echosTermsOfService}, {echosTermsOfUse} and {echosPrivacyPolicy}, as well as Dwolla's {dwollasTermsOfService} and {dwollasPrivacyPolicy}.",
   "verification.verification": "We're almost done creating your account. Please provide your e-mail and create a password.",
   "verification.provideSecurityCode": "Please provide the Security Code sent to your email, your email and desired new password.",
   "verification.labels.securityCode": "Security Code",
@@ -2030,10 +2030,10 @@
   "verification.termsAndConditions": "Terms and Conditions",
   "notifications.companyUpdated": "Company {name} succesfully updated.",
   "notifications.companyCreated": "Company {name} succesfully created.",
-  "notifications.echoProductCreated.header": "Created Echo Product",
-  "notifications.echoProductCreated.content": "Echo Product {name} successfully created",
-  "notifications.echoProductUpdated.header": "Updated Echo Product",
-  "notifications.echoProductUpdated.content": "Echo Product {name} successfully updated",
+  "notifications.echoProductCreated.header": "Created Company Generic Product",
+  "notifications.echoProductCreated.content": "Company Generic Product {name} successfully created",
+  "notifications.echoProductUpdated.header": "Updated Company Generic Product",
+  "notifications.echoProductUpdated.content": "Company Generic Product {name} successfully updated",
   "notifications.manualShippingQuote.header": "Request succesfully submitted",
   "notifications.manualShippingQuote.content": "Request for Shipment Quote has been successful",
   "productCatalog.newProduct": "New Product",
@@ -2666,8 +2666,8 @@
   "order.detail.status.pending": "This is a pending order, waiting for Seller's confirmation. If Seller does not confirm the order within 24h, it will be automatically rejected. In the meantime, you can cancel the order.",
   "order.detail.status.draft": "This is an order draft as its creator has exceeded allow ordering limits. The draft order can be approved or discarded. It needs to be done within 24h from its creation, otherwise it will be discarded automatically. Draft orders are not visible to Seller.",
   "order.detail.nameOfOppositeParty": "Name of Opposite Party",
-  "order.detail.echoSystemTransaction": "Echo System Transaction",
-  "order.detail.echoSupportPhone": "Echo Support Phone",
+  "order.detail.echoSystemTransaction": "Blue Pallet Transaction",
+  "order.detail.echoSupportPhone": "Blue Pallet Support Phone",
   "order.detail.clickToEdit": "Click to edit",
   "order.actionRequired": "Action Required",
   "order.orderInfo": "Order Info",
