DT-552 - dynamic companyName for most translations

--- a/localization/en.json
+++ b/localization/en.json
@@ -149,7 +149,7 @@
   "bluePallet.anonymouslySell": "Anonymously Sell to our entire network of buyers",
   "bluePallet.buyerBenefits": "Buyer Benefits",
   "bluePallet.direct": "direct",
-  "bluePallet.footerInfo": "Blue Pallet Direct only displays inventory of Blue Pallet Members. Blue Pallet Direct does not manufacture, distribute, or possess any products listed on the Blue Pallet Direct Marketplace. Blue Pallet Direct will facilitate transactions and returns as outlined SimpleTrade, Inc.’s Terms of use.",
+  "bluePallet.footerInfo": "{companyName} Direct only displays inventory of {companyName} Members. {companyName} Direct does not manufacture, distribute, or possess any products listed on the {companyName} Direct Marketplace. {companyName} Direct will facilitate transactions and returns as outlined SimpleTrade, Inc.’s Terms of use.",
   "bluePallet.freeReturns": "Free Returns*",
   "bluePallet.insuredAR": "100% Insured AR",
   "bluePallet.netPayments": "NET10 Payments",
@@ -159,8 +159,8 @@
   "bluePallet.supplySide": "Supply Side Protections",
   "bluePallet.verifiedBuyers": "Trade Pass Verified Buyers",
   "bluePallet.verifiedSellers": "Trade Pass Verified Sellers",
-  "bluePallet.whatIs": "What is Blue Pallet Direct?",
-  "bluePallet.whatIs.answer": "Blue Pallet Direct anonymously displays selected inventory on our direct feed for all qualified members on the Blue Pallet platform to view and purchase. Selling and buying inventory through Blue Pallet Direct comes with industry leading perks. Built in Supply side protections and buyer benefits ensures that Blue Pallet direct transactions are safe, secure, simple, and reliable.",
+  "bluePallet.whatIs": "What is {companyName} Direct?",
+  "bluePallet.whatIs.answer": "{companyName} Direct anonymously displays selected inventory on our direct feed for all qualified members on the {companyName} platform to view and purchase. Selling and buying inventory through {companyName} Direct comes with industry leading perks. Built in Supply side protections and buyer benefits ensures that {companyName} direct transactions are safe, secure, simple, and reliable.",
   "broadcast.byRegion": "Regions",
   "broadcast.byCompany": "Companies",
   "broadcast.controls": "Broadcast Controls",
@@ -268,21 +268,21 @@
   "navigation.credentials.certified": "Certified",
   "navigation.credentials.pending": "Pending",
   "dwolla.controllerTitlePopup": "Please read below for the definition of Controller in this context.",
-  "dwolla.paymentPoweredBy": "Blue Pallet Global Chemical Exchange payment gateway is powered by:",
+  "dwolla.paymentPoweredBy": "{companyName} Global Chemical Exchange payment gateway is powered by:",
   "dwolla.confirmAcc": "Confirm Account Administrator Information",
   "dwolla.confirmCompanyInfo": "Confirm Company Information",
-  "dwolla.thanksForJoining": "Thank you for joining the Blue Pallet Marketplace.",
-  "dwolla.registrationProcess.description": "This is the registration process for your company's payment method. For this process you will need to know some personal information about: your account administrator, your company beneficiaries (if applicable), and your company controller (i.e. Chief Executive Officer (CEO), Chief Operating Officer (COO), Chief Financial Officer (CFO), President, Controller, An executive officer or designated senior manager). If you need to gather information for any of the above person(s), you can exit this process and return at any time by clicking on 'Settings' and then 'Bank Accounts'. None of the personal information gathered will be stored; it is solely for identification authorization. Please see these links for more detailed information about the security of your data ({dwollaWhitePaper} & {dwollaSecurity}). If you have any questions or comments please contact Blue Pallet Support - email {email} or call {number}.",
+  "dwolla.thanksForJoining": "Thank you for joining the {companyName} Marketplace.",
+  "dwolla.registrationProcess.description": "This is the registration process for your company's payment method. For this process you will need to know some personal information about: your account administrator, your company beneficiaries (if applicable), and your company controller (i.e. Chief Executive Officer (CEO), Chief Operating Officer (COO), Chief Financial Officer (CFO), President, Controller, An executive officer or designated senior manager). If you need to gather information for any of the above person(s), you can exit this process and return at any time by clicking on 'Settings' and then 'Bank Accounts'. None of the personal information gathered will be stored; it is solely for identification authorization. Please see these links for more detailed information about the security of your data ({dwollaWhitePaper} & {dwollaSecurity}). If you have any questions or comments please contact {companyName} Support - email {email} or call {number}.",
   "dwolla.beneficialOwnersDesc1": "To help the government fight financial crime, Federal regulation requires our financial institution partners to obtain, verify, and record information about the beneficial owners of legal entity customers. Legal entities can be abused to disguise involvement in terrorist financing, money laundering, tax evasion, corruption, fraud, and other financial crimes. Requiring the disclosure of key individuals who ultimately own or control a legal entity (e.g. the beneficial owners) helps law enforcement investigate and prosecute these crimes.",
   "dwolla.beneficialOwnersDesc2": "The following information must be collected for each individual, if any, who, directly or indirectly, through any contract, arrangement, understanding, relationship or otherwise, owns 25 percent or more of the equity interests of the legal entity listed above. If no individual meets this definition or if the company is publicly traded, please check “Beneficial Owner Not Applicable” below and skip this section.",
   "dwolla.noBeneficialOwner": "Beneficial Owner Not Applicable",
   "dwolla.controller": "Controller",
-  "dwolla.controllerDesc1": "To assure compliance with US financial institution policies, Blue Pallet must collect the information of at least one individual with significant responsibility for managing the legal entity listed above, such as:",
+  "dwolla.controllerDesc1": "To assure compliance with US financial institution policies, {companyName} must collect the information of at least one individual with significant responsibility for managing the legal entity listed above, such as:",
   "dwolla.controllerDesc2": "An executive officer or senior manager (e.g., Chief Executive Officer, Chief Financial Officer, Chief Operating Officer, Managing Member, General Partner, President, Vice President, Treasurer); or",
   "dwolla.controllerDesc3": "Any other individual who regularly performs similar functions.",
   "dwolla.acceptance": "I, {name}, hereby certify, to the best of my knowledge, that the information provided above is complete and correct.",
   "dwolla.registrationComplete": "Registration Completed",
-  "dwolla.registrationCompleteDesc": "Thank you for registering for Dwolla payment processor with Blue Pallet. The verification process can take 24-48 hours. In the meantime you can add your Products, Warehouses, Branches, and other information to the Settings section of Blue Pallet. Once you have received the verification e-mail, you will be able to add your Bank Accounts. You will be required to set up a Bank Account and Logistics account before you are able to make transactions. If you do not receive a verification e-mail within 48 hours, please contact {mail} or call {tel}.",
+  "dwolla.registrationCompleteDesc": "Thank you for registering for Dwolla payment processor with {companyName}. The verification process can take 24-48 hours. In the meantime you can add your Products, Warehouses, Branches, and other information to the Settings section of {companyName}. Once you have received the verification e-mail, you will be able to add your Bank Accounts. You will be required to set up a Bank Account and Logistics account before you are able to make transactions. If you do not receive a verification e-mail within 48 hours, please contact {mail} or call {tel}.",
   "dwolla.registrationCompleteDesc1": "Thanks for registering for your Dwolla Account. The verification process can take 24-48 hours. In the meantime you can add your Products, Warehouses, Branches, and other information in the Settings section of (web app name).",
   "dwolla.registrationCompleteDesc2": "Once Dwolla sends you the verification e-mail you can then add your Bank Accounts and Logisitics details. If you don’t receive a verification e-mail please contact support@echosystem.com or call (833) 321 3246.",
   "dwolla.personOpeningAcc": "Person Opening the Account:",
@@ -1020,7 +1020,7 @@
   "global.productGroup": "Product Group",
   "global.errorValidation.title": "Errors on form",
   "global.errorValidation.content": "Fields on form are incomplete/non-validating, please fix the issues first",
-  "global.copyright": "Copyright {currentYear} Blue Pallet",
+  "global.copyright": "Copyright {currentYear} {companyName}",
   "global.addDocument": "Add Document",
   "global.notes": "Notes",
   "global.processed": "Processed",
@@ -1374,10 +1374,10 @@
   "myInventory.acceptBids": "Accept bids on offer?",
   "myInventory.whoShouldSee": "Who should see this offer?",
   "myInventory.listingShare": "Enable Listing Share for this offer?",
-  "myInventory.allSubtitle": "My Network + Blue Pallet Direct",
+  "myInventory.allSubtitle": "My Network + {companyName} Direct",
   "myInventory.myNetworkOnly": "My Network Only",
   "myInventory.myNetworkOnlySubtitle": "Members I'm Connected To",
-  "myInventory.bluePalletDirect": "Blue Pallet Direct",
+  "myInventory.bluePalletDirect": "{companyName} Direct",
   "myInventory.bluePalletDirectSubtitle": "Open Marketplace",
   "sharedListings.internalProductName": "Internal Product Name",
   "sharedListings.seller": "Seller",
@@ -1696,7 +1696,7 @@
   "addInventory.uploadSpecSheet.header": "Upload Spec Sheet",
   "addInventory.uploadSpecSheet.description1": "The Spec Sheet, also known as a Technical Data Sheet (TDS), is required for a product offer to broadcast to the marketplace.",
   "addInventory.uploadSpecSheet.description2": "You can drag and drop a file from your computer or click on the box to search for the file as well.",
-  "addInventory.uploadSpecSheet.description3": "IMPORTANT! Your company name and contact information cannot be listed on this document and non compliance is against Blue Pallet's Terms and Conditions.",
+  "addInventory.uploadSpecSheet.description3": "IMPORTANT! Your company name and contact information cannot be listed on this document and non compliance is against {companyName}'s Terms and Conditions.",
   "addInventory.optionalProductInfo": "OPTIONAL PRODUCT INFO",
   "addInventory.condition": "Condition",
   "addInventory.grade": "Grade",
@@ -1915,10 +1915,10 @@
   "checkout.summary.orderTotalValue": "Order Total: {value}",
   "checkout.summary.continueToFinish": "Continue to {value} to finish checking out.",
   "checkout.summary.step4": "step 4",
-  "checkout.summary.byPlacingYourOrder": "By placing your order, you agree to Blue Pallet’s {privacyPolicy} and {conditionsOfUse}.",
+  "checkout.summary.byPlacingYourOrder": "By placing your order, you agree to {companyName}’s {privacyPolicy} and {conditionsOfUse}.",
   "checkout.summary.privacyPolicy": "Privacy Policy",
   "checkout.summary.conditionsOfUse": "Conditions Of Use",
-  "checkout.titlePage": "Blue Pallet / Checkout",
+  "checkout.titlePage": "{companyName} / Checkout",
   "checkout.moreResultsAreAvailable": "More results are available, please search by location name or address.",
   "order.deleteHeader": "Delete Order",
   "order.deleteBody": "You are about to delete last item of order. Doing so will redirect you to Shopping cart. Do you wish to continue?",
@@ -2013,12 +2013,12 @@
   "password.retype": "Re-type Password",
   "verification.hello": "Hello!",
   "verification.helloAgain": "Hello again!",
-  "verification.echosTOS": "Blue Pallet's Terms of Service",
+  "verification.echosTOS": "{companyName}'s Terms of Service",
   "verification.dwollasTOS": "Dwolla's Terms of Service",
   "verification.termsOfService": "Terms of Service",
   "verification.termsOfUse": "Terms of Use",
   "verification.privacyPolicy": "Privacy Policy",
-  "verification.termsOfAgreement": "For US residents only. By checking this box, you agree to Blue Pallet's {echosTermsOfService}, {echosTermsOfUse} and {echosPrivacyPolicy}, as well as Dwolla's {dwollasTermsOfService} and {dwollasPrivacyPolicy}.",
+  "verification.termsOfAgreement": "For US residents only. By checking this box, you agree to {companyName}'s {echosTermsOfService}, {echosTermsOfUse} and {echosPrivacyPolicy}, as well as Dwolla's {dwollasTermsOfService} and {dwollasPrivacyPolicy}.",
   "verification.verification": "We're almost done creating your account. Please provide your e-mail and create a password.",
   "verification.provideSecurityCode": "Please provide the Security Code sent to your email, your email and desired new password.",
   "verification.labels.securityCode": "Security Code",
@@ -2303,7 +2303,7 @@
   "marketplace.confirm.deleteBid.Content": "Do you really want to remove Bid?",
   "marketplace.viewOnly": "View Only",
   "marketplace.WeAreVerifyingYourIdentity": "We're verifying your identity",
-  "marketplace.viewOnlyPopupText": "For your security, we need some additional time to verify your identity and your financial information before you buy or sell on Blue Pallet Direct. You will only be able to view Blue Pallet Direct listings during this time. Most verifications are done within 24 hours but in rare cases can take up to 72 hours.",
+  "marketplace.viewOnlyPopupText": "For your security, we need some additional time to verify your identity and your financial information before you buy or sell on {companyName} Direct. You will only be able to view {companyName} Direct listings during this time. Most verifications are done within 24 hours but in rare cases can take up to 72 hours.",
   "marketplace.keepBrowsing": "Keep Browsing",
   "operations.tables.shippingQuotes.buttonAdd": "Add Shipping Quote",
   "operations.tables.tags.buttonAdd": "Add Tag",
@@ -2666,8 +2666,8 @@
   "order.detail.status.pending": "This is a pending order, waiting for Seller's confirmation. If Seller does not confirm the order within 24h, it will be automatically rejected. In the meantime, you can cancel the order.",
   "order.detail.status.draft": "This is an order draft as its creator has exceeded allow ordering limits. The draft order can be approved or discarded. It needs to be done within 24h from its creation, otherwise it will be discarded automatically. Draft orders are not visible to Seller.",
   "order.detail.nameOfOppositeParty": "Name of Opposite Party",
-  "order.detail.echoSystemTransaction": "Blue Pallet Transaction",
-  "order.detail.echoSupportPhone": "Blue Pallet Support Phone",
+  "order.detail.echoSystemTransaction": "{companyName} Transaction",
+  "order.detail.echoSupportPhone": "{companyName} Support Phone",
   "order.detail.clickToEdit": "Click to edit",
   "order.actionRequired": "Action Required",
   "order.orderInfo": "Order Info",
@@ -2689,7 +2689,7 @@
   "order.unitPrice": "Unit Price",
   "order.unitCost": "Unit Cost",
   "order.amount": "Amount",
-  "order.echoFees": "Echo Fees",
+  "order.transactionFee": "Transaction Fee",
   "order.total": "Total",
   "order.totalPrice": "Total Price",
   "order.cogs": "COGS",
@@ -2921,7 +2921,7 @@
   "tutorial.inventory.content": "Once you add your Inventory nothing can stop you from posting to the Marketplace.",
   "tutorial.inventory.button": "Add Inventory",
   "tutorial.marketplace.title": "Broadcast to the Marketplace",
-  "tutorial.marketplace.content": "You're so close! Broadcast an item and you'll be part of the Blue Pallet.",
+  "tutorial.marketplace.content": "You're so close! Broadcast an item and you'll be part of the {companyName}.",
   "tutorial.marketplace.button": "Broadcast Now",
   "tutorial.registerAccount.title": "Register Bank Account",
   "tutorial.registerAccount.content": "Register a Bank Acount is quick and easy. Click here to do it now!",
@@ -2932,7 +2932,7 @@
   "tutorial.congratulation.title": "Congratulations, you have finished the setup!",
   "tutorial.congratulation.content": "This example text is going to run a bit longer so that you can see how spacing within an alert works with kind of content.",
   "tutorial.businessVerification.title": "Business Verification",
-  "tutorial.businessVerification.content": "Blue Pallet is a secure marketplace where each participant is vetted and approved prior to being activated. Since the system can facilitate transactions over $6,000, Blue Pallet must comply with the anti-money laundering provisions outlined in the US Patriot Act. For these reasons, each participant company must pass our business verification requirements.",
+  "tutorial.businessVerification.content": "{companyName} is a secure marketplace where each participant is vetted and approved prior to being activated. Since the system can facilitate transactions over $6,000, {companyName} must comply with the anti-money laundering provisions outlined in the US Patriot Act. For these reasons, each participant company must pass our business verification requirements.",
   "tutorial.businessVerification.beginNow": "Begin now",
   "tutorial.businessVerification.estimated": "Estimated time ~ 10 minutes",
   "sidebar.addNew": "ADD NEW",
