--- a/localization/en.json
+++ b/localization/en.json
@@ -149,7 +149,7 @@
   "bluePallet.anonymouslySell": "Anonymously Sell to our entire network of buyers",
   "bluePallet.buyerBenefits": "Buyer Benefits",
   "bluePallet.direct": "direct",
-  "bluePallet.footerInfo": "Blue Trade Direct only displays inventory of {companyName} Members. Blue Trade Direct does not manufacture, distribute, or possess any products listed on the Blue Trade Direct Marketplace. Blue Trade Direct will facilitate transactions and returns as outlined SimpleTrade, Inc.’s Terms of use.",
+  "bluePallet.footerInfo": "Blue Trade only displays inventory of {companyName} Members. Blue Trade does not manufacture, distribute, or possess any products listed on the Blue Trade Marketplace. Blue Trade will facilitate transactions and returns as outlined SimpleTrade, Inc.’s Terms of use.",
   "bluePallet.freeReturns": "Free Returns*",
   "bluePallet.insuredAR": "100% Insured AR",
   "bluePallet.netPayments": "NET10 Payments",
@@ -159,8 +159,8 @@
   "bluePallet.supplySide": "Supply Side Protections",
   "bluePallet.verifiedBuyers": "Trade Pass Verified Buyers",
   "bluePallet.verifiedSellers": "Trade Pass Verified Sellers",
-  "bluePallet.whatIs": "What is Blue Trade Direct?",
-  "bluePallet.whatIs.answer": "Blue Trade Direct anonymously displays selected inventory on our direct feed for all qualified members on the {companyName} platform to view and purchase. Selling and buying inventory through Blue Trade Direct comes with industry leading perks. Built in Supply side protections and buyer benefits ensures that Blue Trade direct transactions are safe, secure, simple, and reliable.",
+  "bluePallet.whatIs": "What is Blue Trade?",
+  "bluePallet.whatIs.answer": "Blue Trade anonymously displays selected inventory on our direct feed for all qualified members on the {companyName} platform to view and purchase. Selling and buying inventory through Blue Trade comes with industry leading perks. Built in Supply side protections and buyer benefits ensures that Blue Trade direct transactions are safe, secure, simple, and reliable.",
   "broadcast.byRegion": "Regions",
   "broadcast.byCompany": "Companies",
   "broadcast.controls": "Broadcast Controls",
@@ -1374,10 +1374,10 @@
   "myInventory.acceptBids": "Accept bids on offer?",
   "myInventory.whoShouldSee": "Who should see this offer?",
   "myInventory.listingShare": "Enable Listing Share for this offer?",
-  "myInventory.allSubtitle": "My Network + Blue Trade Direct",
+  "myInventory.allSubtitle": "My Network + Blue Trade",
   "myInventory.myNetworkOnly": "My Network Only",
   "myInventory.myNetworkOnlySubtitle": "Members I'm Connected To",
-  "myInventory.bluePalletDirect": "Blue Trade Direct",
+  "myInventory.bluePalletDirect": "Blue Trade",
   "myInventory.bluePalletDirectSubtitle": "Open Marketplace",
   "sharedListings.internalProductName": "Internal Product Name",
   "sharedListings.seller": "Seller",
@@ -2303,7 +2303,7 @@
   "marketplace.confirm.deleteBid.Content": "Do you really want to remove Bid?",
   "marketplace.viewOnly": "View Only",
   "marketplace.WeAreVerifyingYourIdentity": "We're verifying your identity",
-  "marketplace.viewOnlyPopupText": "For your security, we need some additional time to verify your identity and your financial information before you buy or sell on Blue Trade Direct. You will only be able to view Blue Trade Direct listings during this time. Most verifications are done within 24 hours but in rare cases can take up to 72 hours.",
+  "marketplace.viewOnlyPopupText": "For your security, we need some additional time to verify your identity and your financial information before you buy or sell on Blue Trade. You will only be able to view Blue Trade listings during this time. Most verifications are done within 24 hours but in rare cases can take up to 72 hours.",
   "marketplace.keepBrowsing": "Keep Browsing",
   "operations.tables.shippingQuotes.buttonAdd": "Add Shipping Quote",
   "operations.tables.tags.buttonAdd": "Add Tag",
