DT-540 removed direct

--- a/localization/en.json
+++ b/localization/en.json
@@ -160,7 +160,7 @@
   "bluePallet.verifiedBuyers": "Trade Pass Verified Buyers",
   "bluePallet.verifiedSellers": "Trade Pass Verified Sellers",
   "bluePallet.whatIs": "What is Blue Trade?",
-  "bluePallet.whatIs.answer": "Blue Trade anonymously displays selected inventory on our direct feed for all qualified members on the {companyName} platform to view and purchase. Selling and buying inventory through Blue Trade comes with industry leading perks. Built in Supply side protections and buyer benefits ensures that Blue Trade direct transactions are safe, secure, simple, and reliable.",
+  "bluePallet.whatIs.answer": "Blue Trade anonymously displays selected inventory on our direct feed for all qualified members on the {companyName} platform to view and purchase. Selling and buying inventory through Blue Trade comes with industry leading perks. Built in Supply side protections and buyer benefits ensures that Blue Trade transactions are safe, secure, simple, and reliable.",
   "broadcast.byRegion": "Regions",
   "broadcast.byCompany": "Companies",
   "broadcast.controls": "Broadcast Controls",
