DT-157 Company user Notifications rework + row detail for 'MessageShippingQuoteInfoResponse' type.

--- a/localization/en.json
+++ b/localization/en.json
@@ -6,14 +6,6 @@
   "agree.withTOS.companyAdmin": "For US residents only. By checking this box, you agree to {echosTermsOfService}, {echosTermsOfUse} and {echosPrivacyPolicy}, as well as {dwollasTermsOfService} and {dwollasPrivacyPolicy}. You also certify that you are authorized to act on the behalf of your company.",
   "agree.withTOS.nonCompanyAdmin": "For US residents only. By checking this box, you agree to {echosTermsOfService}, {echosTermsOfUse} and {echosPrivacyPolicy}.",
   "alerts.title": "Notifications",
-  "alerts.menu.application": "Application",
-  "alerts.menu.inventory": "Inventory",
-  "alerts.menu.purchase_orders": "Purchase Orders",
-  "alerts.menu.sales_orders": "Sales Orders",
-  "alerts.menu.wanted_board_offers": "Wanted Board Offers",
-  "alerts.menu.wanted_board_requests": "Wanted Board Requests",
-  "alerts.menu.wanted_board_matches": "Wanted Board Matches",
-  "alerts.menu.users": "Users",
   "alerts.searchNotification": "Search Notification",
   "alerts.button.all": "All",
   "alerts.button.read": "Read",
@@ -42,6 +34,12 @@
   "alerts.addShippingQuote": "Add Shipping Quote",
   "alerts.shippingQuoteId": "Shipping Quote ID",
   "alerts.shippingQuoteIdColon": "Shipping Quote ID:",
+  "alerts.carrier": "Carrier",
+  "alerts.price": "Price",
+  "alerts.quoteId": "Quote ID",
+  "alerts.validityDate": "Validity Date",
+  "alerts.youCanNowApply": "You can now apply the quote to your order",
+  "alerts.close": "Close",
   "alerts.checkout": "Checkout",
   "auth.resetMyPassword": "Password Reset",
   "auth.cancelPasswordReset": "Password Reset Cancel",
@@ -219,6 +217,15 @@
   "navigation.alerts.companyGenericProductRequests": "Product Requests",
   "navigation.alerts.disputes": "Order Disputes",
   "navigation.alerts.warehouseVerification": "Warehouse Verification",
+  "navigation.alerts.application": "Application",
+  "navigation.alerts.inventory": "Inventory",
+  "navigation.alerts.purchaseOrders": "Purchase Orders",
+  "navigation.alerts.salesOrders": "Sales Orders",
+  "navigation.alerts.wantedBoardOffers": "Wanted Board Offers",
+  "navigation.alerts.wantedBoardRequests": "Wanted Board Requests",
+  "navigation.alerts.wantedBoardMatches": "Wanted Board Matches",
+  "navigation.alerts.marketplaceBids": "Marketplace Bids",
+  "navigation.alerts.users": "Users",
   "navigation.companies": "Companies",
   "navigation.dashboard": "Dashboard",
   "navigation.products": "Products",
